mdapipkg/objects/Position__c/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <label>Contacts</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>