mdapipkg/objects/Position__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <label>Date Opened</label>
    <required>true</required>
    <type>Date</type>
</CustomField>