mdapipkg/objects/Position__c/fields/Max_Salary__c.field-meta.xml
<CustomField>
    <fullName>Max_Salary__c</fullName>
    <inlineHelpText>Monthly salary in USD</inlineHelpText>
    <label>Max Salary</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>