mdapipkg/objects/Position__c/fields/Min_Salary__c.field-meta.xml
<CustomField>
    <fullName>Min_Salary__c</fullName>
    <inlineHelpText>Monthly salary in USD</inlineHelpText>
    <label>Min Salary</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>