mdapipkg/objects/Position__c/fields/Work_experience__c.field-meta.xml
<CustomField>
    <fullName>Work_experience__c</fullName>
    <inlineHelpText>Work experience in years</inlineHelpText>
    <label>Work experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>