mdapipkg/objects/Position__c/recordTypes/IT_Position.recordType-meta.xml
<RecordType>
    <fullName>IT_Position</fullName>
    <active>true</active>
    <label>IT-Position</label>
</RecordType>