mdapipkg/objects/Position__c/recordTypes/Practice_position.recordType-meta.xml
<RecordType>
    <fullName>Practice_position</fullName>
    <active>true</active>
    <label>Practice-position</label>
</RecordType>