mdapipkg/objects/Position__c/validationRules/Date_Opened.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Opened</fullName>
    <active>true</active>
    <errorConditionFormula>Date_Opened__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date_Opened__c</errorDisplayField>
    <errorMessage>Date Opened cannot by later then today</errorMessage>
</ValidationRule>