mdapipkg/objects/Position__c/validationRules/SalaryValue.validationRule-meta.xml
<ValidationRule>
    <fullName>SalaryValue</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Min_Salary__c&lt;100, Max_Salary__c &lt;100, Min_Salary__c &gt; Max_Salary__c)</errorConditionFormula>
    <errorMessage>Salary cannot be less then 100 USD and min salary cannot by greater than max salary</errorMessage>
</ValidationRule>