mdapipkg/objects/Position__c/listViews/Opened_Positions_List_View.listView-meta.xml
<ListView>
    <fullName>Opened_Positions_List_View</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Location__c</columns>
    <columns>Max_Salary__c</columns>
    <columns>Min_Salary__c</columns>
    <columns>Date_Opened__c</columns>
    <columns>Date_Closed__c</columns>
    <columns>Requirements__c</columns>
    <columns>Skills__c</columns>
    <columns>Work_experience__c</columns>
    <columns>Description__c</columns>
    <columns>Contacts__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Opened</value>
    </filters>
    <label>Opened Positions</label>
</ListView>